2012-03-23 Tsi YANG  <tsi@in-cite.net>
	* Fix : Added sorting on retrieving categories elements.
	* Refactor : Reworked typoscript configuration to display categories.

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: update autoload

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Change to version 1.1.1
	* Fix: add picto only if exist
	* Change to version 1.1.0

2012-03-20 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added categories pictos process
	* Feature: Added pictos in API command.

2012-03-20 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added picto field
	* Fix: Mistakes in css class name

2011-05-13 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter