@@ -1,4 +1,6 @@
 2012-03-23 Tsi YANG  <tsi@in-cite.net>
+	* Documentation: Updated with picto.
+	* Comments: Cleaned comments.
 	* Fix : Added sorting on retrieving categories elements.
 	* Refactor : Reworked typoscript configuration to display categories.
 
